syntax = "proto2";

option java_package = "io.polycat.catalog.store.protos";
option java_outer_classname = "ShareMetaPrivilegePolicyProto";
option java_multiple_files = true;

import "record_metadata_options.proto";

message ShareMetaPrivilegePolicyRecord {
  required string policy_id = 1;
  required string project_id = 2;
  required int32 principal_type = 3;
  required int32 principal_source = 4;
  required string principal_id = 5;
  required int32 object_type = 6;
  required string object_id = 7;
  required bool  effect = 8;
  required int64 privilege = 9;

  optional string condition = 10;
  optional string obligation = 11;
  required bool   grant_able = 12;
  required int64 update_time = 13;
}

message ShareMetaPrivilegePolicyRecordUnion {
  option (com.apple.foundationdb.record.record).usage = UNION;
  required ShareMetaPrivilegePolicyRecord share_meta_privilege_policy = 1;
}